@@ -14,6 +14,11 @@ configuration.
      "linux32" to run a 32-bit Linux chroot on an amd64 system, for
      example.
 
+  2) The root user can access all chroots, even when the root group is
+     ommitted from the groups or root_groups lists.  Authentication is
+     still required, but by default is skipped due to using
+     pam_rootok.so in the PAM configuration.
+
 * Major changes in 0.2.11:
 
   1) The 10mount script, used to unmount filesystem in a chroot, will
